fix misaligned label

--- a/public_html/styles/main.css
+++ b/public_html/styles/main.css
@@ -11110,7 +11110,7 @@ form .col:first-of-type {
 form .col:last-of-type {
   padding-right: 0; }
 
-form .row .input-field.col:first-of-type label {
+form .input-field.col:first-of-type label {
   left: 0; }
 
 form .row-submit {
