--- a/src/styles/base/_forms.scss
+++ b/src/styles/base/_forms.scss
@@ -5,7 +5,7 @@ form {
       margin-bottom: 1px;
       font-size: 20px;
   }
-  
+
   .row {
     margin-bottom: 0;
   }
@@ -20,7 +20,7 @@ form {
     }
   }
 
-  .row .input-field.col:first-of-type label {
+  .input-field.col:first-of-type label {
     left: 0;
   }
 
